# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: cli.py  path.py
page_loader/scripts/: page_loader.py
tests/: test_format.py  test_main_page.py  test_names.py  test_page_loader.py
