[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["a-yanovskiy <a.e.yanovskiy@gmail.com>"]

packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
gendiff = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
